sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value getNombreValeur
    if (i>getNombreValeur()-1) { return }
          ^