sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  while (true) {
    if (i>getNombreValeur()-1) { return }
    if (getValeur(i)>getValeur(i+1)) {
      echange(i,i+1)
      if (i==0) {i+=1}
      else {i-=1}
    }
    else {i+=1}
  }
}